--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "ember-resolver": "^4.0.0",
     "ember-simple-auth": "^1.4.2",
     "ember-simple-auth-token": "^3.0.0",
-    "ember-source": "~2.18.0",
+    "ember-source": "3.0.0-beta.5",
     "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
     "loader.js": "^4.2.3"
