--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@ember-decorators/babel-transforms": "^0.1.1",
+    "babel-eslint": "^8.2.1",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.18.1",
@@ -39,7 +40,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-simple-auth": "^1.4.2",
-    "ember-simple-auth-token": "^3.0.0",
+    "ember-simple-auth-token": "git+https://github.com/abhishek97/ember-simple-auth-token.git",
     "ember-source": "3.0.0-beta.5",
     "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
