--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
+    "ember-concurrency": "^0.8.14",
     "ember-data": "~2.18.0",
     "ember-decorators": "^1.3.4",
     "ember-export-application-global": "^2.0.0",
