--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "codingblocks-online",
   "dependencies": {
-    "raven-js": "~3.3"
+    "raven-js": "~3.3",
+    "hls.js": "^0.8.9"
   }
 }
