--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-data": "~2.18.0",
     "ember-decorators": "^1.3.4",
     "ember-export-application-global": "^2.0.0",
+    "ember-keyboard-shortcuts": "^1.0.6",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-simple-auth": "^1.4.2",
