--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
+    "ember-composable-helpers": "^2.1.0",
     "ember-concurrency": "^0.8.14",
     "ember-data": "~2.18.0",
     "ember-decorators": "^1.3.4",
@@ -45,6 +46,7 @@
     "ember-simple-auth": "^1.4.2",
     "ember-simple-auth-token": "git+https://github.com/abhishek97/ember-simple-auth-token.git",
     "ember-source": "3.0.0-beta.5",
+    "ember-truth-helpers": "^2.0.0",
     "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
     "liquid-fire": "^0.29.2",
