--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ember-decorators/babel-transforms": "^0.1.1",
     "babel-eslint": "^8.2.1",
     "broccoli-asset-rev": "^2.4.5",
+    "ember-ace": "^1.3.1",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.18.1",
     "ember-cli-app-version": "^3.0.0",
