about course page

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-qunit": "^4.1.1",
     "ember-cli-sass": "^7.1.7",
     "ember-cli-sentry": "^2.4.4",
@@ -43,6 +44,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-keyboard-shortcuts": "^1.0.6",
     "ember-load-initializers": "^1.0.0",
+    "ember-moment": "^7.7.0",
     "ember-resolver": "^4.0.0",
     "ember-simple-auth": "^1.4.2",
     "ember-simple-auth-token": "git+https://github.com/abhishek97/ember-simple-auth-token.git",
