--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
+  },
+  "dependencies": {
+    "ember-cli-google-analytics": "^1.5.0"
   }
 }
