--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ember-data": "~2.18.0",
     "ember-decorators": "^1.3.4",
     "ember-export-application-global": "^2.0.0",
+    "ember-facebook-pixel": "^0.1.0",
     "ember-keyboard-shortcuts": "^1.0.6",
     "ember-load-initializers": "^1.0.0",
     "ember-moment": "^7.7.0",
