--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
-    "ember-cli-google-analytics": "^1.5.0"
+    "ember-cli-google-analytics": "^1.5.0",
+    "ember-line-clamp": "^0.2.15"
   }
 }
