--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "@coding-blocks/motley": "0.2.6",
     "ember-cli-google-analytics": "^1.5.0",
-    "ember-line-clamp": "^0.2.15"
+    "ember-line-clamp": "^0.2.15",
+    "ember-modal-dialog": "^3.0.0-beta.0"
   }
 }
