--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "ember-facebook-pixel": "^0.1.0",
     "ember-keyboard-shortcuts": "^1.0.6",
     "ember-load-initializers": "^1.0.0",
+    "ember-local-storage": "^1.4.1",
+    "ember-modal-dialog": "^3.0.0-beta.0",
     "ember-moment": "^7.7.0",
     "ember-resolver": "^4.0.0",
     "ember-simple-auth": "^1.4.2",
@@ -64,7 +66,6 @@
   "dependencies": {
     "@coding-blocks/motley": "0.2.6",
     "ember-cli-google-analytics": "^1.5.0",
-    "ember-line-clamp": "^0.2.15",
-    "ember-modal-dialog": "^3.0.0-beta.0"
+    "ember-line-clamp": "^0.2.15"
   }
 }
