--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "@coding-blocks/motley": "0.3.11",
     "ember-cli-google-analytics": "^1.5.0",
-    "ember-line-clamp": "^0.2.15"
+    "ember-line-clamp": "^0.2.15",
+    "moment": "^2.22.2"
   }
 }
