--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ember-source": "3.0.0-beta.5",
     "ember-task-button": "^0.0.1",
     "ember-truth-helpers": "^2.0.0",
+    "ember-uploader": "^2.0.0",
     "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
     "liquid-fire": "^0.29.2",
@@ -65,7 +66,7 @@
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
-    "@coding-blocks/motley": "0.3.32",
+    "@coding-blocks/motley": "0.3.34",
     "ember-line-clamp": "^0.2.15",
     "moment": "^2.22.2",
     "showdown-katex-studdown": "^0.4.0"
