--- a/package.json
+++ b/package.json
@@ -3,67 +3,72 @@
   "version": "0.0.0",
   "private": true,
   "description": "Small description for codingblocks-online goes here",
+  "repository": "",
   "license": "MIT",
   "author": "",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
   "scripts": {
     "build": "ember build",
-    "lint:js": "eslint ./*.js app config lib server tests",
+    "lint:hbs": "ember-template-lint .",
+    "lint:js": "eslint .",
     "start": "ember serve",
     "test": "ember test"
   },
   "devDependencies": {
     "@ember-decorators/babel-transforms": "^0.1.1",
+    "@ember/jquery": "^0.5.2",
+    "@ember/optional-features": "^0.6.3",
     "babel-eslint": "^8.2.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "broccoli-asset-rev": "^2.4.5",
+    "broccoli-asset-rev": "^2.7.0",
     "ember-ace": "^1.3.1",
-    "ember-ajax": "^3.0.0",
-    "ember-cli": "~2.18.1",
-    "ember-cli-app-version": "^3.0.0",
-    "ember-cli-babel": "^6.6.0",
-    "ember-cli-dependency-checker": "^2.0.0",
-    "ember-cli-eslint": "^4.2.1",
+    "ember-ajax": "^4.0.1",
+    "ember-cli": "~3.8.1",
+    "ember-cli-app-version": "^3.2.0",
+    "ember-cli-babel": "^7.1.2",
+    "ember-cli-dependency-checker": "^3.1.0",
+    "ember-cli-eslint": "^4.2.3",
     "ember-cli-head": "^0.4.1",
-    "ember-cli-htmlbars": "^2.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
-    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-htmlbars": "^3.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
+    "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-moment-shim": "^3.7.1",
-    "ember-cli-qunit": "^4.1.1",
     "ember-cli-sass": "^7.1.7",
-    "ember-cli-shims": "^1.2.0",
     "ember-cli-showdown": "^4.4.2",
-    "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^2.0.0",
+    "ember-cli-sri": "^2.1.1",
+    "ember-cli-template-lint": "^1.0.0-beta.1",
+    "ember-cli-uglify": "^2.1.0",
     "ember-composable-helpers": "^2.1.0",
     "ember-concurrency": "^0.8.14",
-    "ember-data": "~2.18.0",
+    "ember-data": "~3.8.0",
     "ember-decorators": "^1.3.4",
     "ember-export-application-global": "^2.0.0",
     "ember-facebook-pixel": "^0.1.0",
     "ember-keyboard-shortcuts": "^1.0.6",
-    "ember-load-initializers": "^1.0.0",
+    "ember-load-initializers": "^1.1.0",
     "ember-local-storage": "^1.4.1",
+    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-modal-dialog": "^3.0.0-beta.0",
     "ember-moment": "^7.7.0",
-    "ember-resolver": "^4.0.0",
+    "ember-qunit": "^3.4.1",
+    "ember-resolver": "^5.0.1",
     "ember-simple-auth": "^1.4.2",
     "ember-simple-auth-token": "git+https://github.com/abhishek97/ember-simple-auth-token.git",
-    "ember-source": "3.0.0-beta.5",
+    "ember-source": "~3.8.0",
     "ember-task-button": "^0.0.1",
     "ember-truth-helpers": "^2.0.0",
     "ember-uploader": "^2.0.0",
-    "ember-welcome-page": "^3.0.0",
-    "eslint-plugin-ember": "^5.0.0",
+    "ember-welcome-page": "^3.2.0",
+    "eslint-plugin-ember": "^5.2.0",
     "liquid-fire": "^0.29.2",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.7.0",
+    "qunit-dom": "^0.8.0"
   },
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "6.* || 8.* || >= 10.*"
   },
   "dependencies": {
     "@coding-blocks/motley": "0.3.34",
