--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "@ember-decorators/babel-transforms": "^0.1.1",
+    "@babel/core": "^7.3.4",
+    "@ember-decorators/babel-transforms": "^5.0.0",
     "@ember/jquery": "^0.5.2",
     "@ember/optional-features": "^0.6.3",
-    "babel-eslint": "^8.2.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-eslint": "^8.0.0",
     "broccoli-asset-rev": "^2.7.0",
     "ember-ace": "^1.3.1",
     "ember-ajax": "^4.0.1",
@@ -43,10 +43,10 @@
     "ember-cli-uglify": "^2.1.0",
     "ember-composable-helpers": "^2.1.0",
     "ember-concurrency": "^0.8.14",
+    "ember-concurrency-decorators": "^0.5.5",
     "ember-data": "~3.8.0",
-    "ember-decorators": "^1.3.4",
+    "ember-decorators": "^5.1.4",
     "ember-export-application-global": "^2.0.0",
-    "ember-facebook-pixel": "^0.1.0",
     "ember-keyboard-shortcuts": "^1.0.6",
     "ember-load-initializers": "^1.1.0",
     "ember-local-storage": "^1.4.1",
