--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ember-load-initializers": "^1.1.0",
     "ember-local-storage": "^1.4.1",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-metrics": "^0.13.0",
     "ember-modal-dialog": "^3.0.0-beta.0",
     "ember-moment": "^7.7.0",
     "ember-qunit": "^3.4.1",
