--- a/lib/hiring-blocks/package.json
+++ b/lib/hiring-blocks/package.json
@@ -6,6 +6,8 @@
   ],
   "dependencies": {
     "ember-cli-htmlbars": "*",
-    "ember-cli-babel": "*"
+    "ember-cli-babel": "*",
+    "@ember-decorators/babel-transforms": "*",
+    "ember-decorators": "*"
   }
 }
