--- a/lib/hiring-blocks/package.json
+++ b/lib/hiring-blocks/package.json
@@ -8,6 +8,15 @@
     "ember-cli-htmlbars": "*",
     "ember-cli-babel": "*",
     "@ember-decorators/babel-transforms": "*",
-    "ember-decorators": "*"
+    "ember-decorators": "*",
+    "ember-cli-showdown": "*",
+    "showdown-katex-studdown": "*",
+    "ember-truth-helpers": "*",
+    "ember-concurrency": "*",
+    "ember-concurrency-decorators": "*"
+  },
+  "devDependencies": {
+    "ember-simple-auth": "*",
+    "ember-simple-auth-token": "*"
   }
 }
