--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@ember-decorators/babel-transforms": "^5.0.0",
     "@ember/jquery": "^0.5.2",
     "@ember/optional-features": "^0.6.3",
+    "@firebase/app": "^0.3.13",
+    "@firebase/database": "^0.3.16",
     "babel-eslint": "^8.0.0",
     "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^4.0.1",
@@ -61,13 +63,12 @@
     "ember-simple-auth": "^1.4.2",
     "ember-simple-auth-token": "git+https://github.com/abhishek97/ember-simple-auth-token.git",
     "ember-source": "~3.8.0",
+    "ember-toggle": "^5.3.2",
     "ember-truth-helpers": "^2.0.0",
     "ember-uploader": "^2.0.0",
     "ember-welcome-page": "^3.2.0",
     "eslint-plugin-ember": "^5.2.0",
     "firepad": "^1.5.3",
-    "@firebase/app": "^0.3.13",
-    "@firebase/database": "^0.3.16",
     "liquid-fire": "^0.29.2",
     "loader.js": "^4.7.0",
     "qunit-dom": "^0.8.0"
