--- a/package.json
+++ b/package.json
@@ -22,12 +22,10 @@
     "@ember-decorators/babel-transforms": "^5.0.0",
     "@ember/jquery": "^0.5.2",
     "@ember/optional-features": "^0.6.3",
-    "@firebase/app": "^0.3.13",
-    "@firebase/database": "^0.3.16",
     "babel-eslint": "^8.0.0",
     "broccoli-asset-rev": "^2.7.0",
+    "ember-ace": "^1.3.1",
     "ember-ajax": "^4.0.1",
-    "ember-auto-import": "^1.2.21",
     "ember-cli": "~3.8.1",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.1.2",
@@ -57,18 +55,15 @@
     "ember-metrics": "^0.13.0",
     "ember-modal-dialog": "^3.0.0-beta.0",
     "ember-moment": "^7.7.0",
-    "ember-monaco": "^1.0.2",
     "ember-qunit": "^3.4.1",
     "ember-resolver": "^5.0.1",
     "ember-simple-auth": "^1.4.2",
     "ember-simple-auth-token": "git+https://github.com/abhishek97/ember-simple-auth-token.git",
     "ember-source": "~3.8.0",
-    "ember-toggle": "^5.3.2",
     "ember-truth-helpers": "^2.0.0",
     "ember-uploader": "^2.0.0",
     "ember-welcome-page": "^3.2.0",
     "eslint-plugin-ember": "^5.2.0",
-    "firepad": "^1.5.3",
     "liquid-fire": "^0.29.2",
     "loader.js": "^4.7.0",
     "qunit-dom": "^0.8.0"
