added: resume_link to job application

--- a/lib/hiring-blocks/package.json
+++ b/lib/hiring-blocks/package.json
@@ -13,7 +13,8 @@
     "showdown-katex-studdown": "*",
     "ember-truth-helpers": "*",
     "ember-concurrency": "*",
-    "ember-concurrency-decorators": "*"
+    "ember-concurrency-decorators": "*",
+    "ember-modal-dialog": "*"
   },
   "devDependencies": {
     "ember-simple-auth": "*",
