--- a/lib/hiring-blocks/package.json
+++ b/lib/hiring-blocks/package.json
@@ -14,7 +14,8 @@
     "ember-truth-helpers": "*",
     "ember-concurrency": "*",
     "ember-concurrency-decorators": "*",
-    "ember-modal-dialog": "*"
+    "ember-modal-dialog": "*",
+    "ember-moment": "*"
   },
   "devDependencies": {
     "ember-simple-auth": "*",
