try to update ember

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
-    "@ember-decorators/babel-transforms": "^5.0.0",
     "@ember/jquery": "^0.6.0",
     "@ember/optional-features": "^0.7.0",
     "@firebase/app": "^0.3.13",
@@ -44,10 +43,9 @@
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
     "ember-composable-helpers": "^2.1.0",
-    "ember-concurrency": "^0.8.14",
-    "ember-concurrency-decorators": "^0.5.5",
+    "ember-concurrency": "^0.10.0",
+    "ember-concurrency-decorators": "^1.0.0-beta.2",
     "ember-data": "~3.10.0",
-    "ember-decorators": "^5.1.4",
     "ember-engines": "^0.5.26",
     "ember-export-application-global": "^2.0.0",
     "ember-form-for": "^2.0.1",
