--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ember-concurrency": "^0.10.0",
     "ember-concurrency-decorators": "^1.0.0-beta.2",
     "ember-data": "~3.10.0",
+    "ember-decorators": "^6.0.0",
     "ember-engines": "^0.5.26",
     "ember-export-application-global": "^2.0.0",
     "ember-form-for": "^2.0.1",
