--- a/lib/cricket-cup/package.json
+++ b/lib/cricket-cup/package.json
@@ -6,6 +6,7 @@
   ],
   "dependencies": {
     "ember-cli-htmlbars": "*",
-    "ember-cli-babel": "*"
+    "ember-cli-babel": "*",
+    "ember-moment": "*"
   }
 }
