--- a/lib/cricket-cup/package.json
+++ b/lib/cricket-cup/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "ember-cli-htmlbars": "*",
     "ember-cli-babel": "*",
-    "ember-moment": "*"
+    "ember-moment": "*",
+    "ember-timer": "*"
   }
 }
