--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "ember-simple-auth": "^1.4.2",
     "ember-simple-auth-token": "git+https://github.com/abhishek97/ember-simple-auth-token.git",
     "ember-source": "~3.10.0",
+    "ember-timer": "^1.0.0",
     "ember-toggle": "^5.3.2",
     "ember-truth-helpers": "^2.0.0",
     "ember-uploader": "^2.0.0",
