--- a/lib/cricket-cup/package.json
+++ b/lib/cricket-cup/package.json
@@ -8,6 +8,8 @@
     "ember-cli-htmlbars": "*",
     "ember-cli-babel": "*",
     "ember-moment": "*",
-    "ember-timer": "*"
+    "ember-timer": "*",
+    "ember-concurrency": "*",
+    "ember-concurrency-decorators": "*"
   }
 }
