correct incorrect added

--- a/lib/cricket-cup/package.json
+++ b/lib/cricket-cup/package.json
@@ -10,6 +10,7 @@
     "ember-moment": "*",
     "ember-timer": "*",
     "ember-concurrency": "*",
-    "ember-concurrency-decorators": "*"
+    "ember-concurrency-decorators": "*",
+    "ember-truth-helpers": "*"
   }
 }
