--- a/package.json
+++ b/package.json
@@ -19,13 +19,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
-    "@ember/jquery": "^0.6.0",
     "@ember/optional-features": "^0.7.0",
     "@firebase/app": "^0.3.13",
     "@firebase/database": "^0.3.16",
     "babel-eslint": "^8.0.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-ajax": "^5.0.0",
     "ember-auto-import": "^1.2.21",
     "ember-cli": "~3.10.1",
     "ember-cli-app-version": "^3.2.0",
@@ -49,6 +47,7 @@
     "ember-decorators": "^6.0.0",
     "ember-engines": "^0.7.1",
     "ember-export-application-global": "^2.0.0",
+    "ember-fetch": "^6.5.1",
     "ember-form-for": "^2.0.1",
     "ember-keyboard-shortcuts": "^1.0.6",
     "ember-load-initializers": "^2.0.0",
