--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@firebase/database": "^0.3.16",
     "babel-eslint": "^8.0.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-ajax": "^5.0.0",
     "ember-auto-import": "^1.2.21",
     "ember-cli": "~3.10.1",
     "ember-cli-app-version": "^3.2.0",
@@ -49,6 +48,7 @@
     "ember-decorators": "^6.0.0",
     "ember-engines": "^0.7.1",
     "ember-export-application-global": "^2.0.0",
+    "ember-fetch": "^6.7.0",
     "ember-form-for": "^2.0.1",
     "ember-keyboard-shortcuts": "^1.0.6",
     "ember-load-initializers": "^2.0.0",
