--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.0.1",
     "ember-simple-auth": "^1.4.2",
-    "ember-simple-auth-token": "git+https://github.com/abhishek97/ember-simple-auth-token.git",
+    "ember-simple-auth-token": "^4.0.7",
     "ember-source": "~3.10.0",
     "ember-timer": "^1.1.0",
     "ember-toggle": "^5.3.2",
