--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@firebase/database": "^0.3.16",
     "babel-eslint": "^8.0.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.2.21",
+    "ember-auto-import": "^1.5.2",
     "ember-cli": "~3.10.1",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.7.3",
+    "ember-cli-bundle-analyzer": "^0.1.0",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-head": "^0.4.1",
