--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ember-cli-bundle-analyzer": "^0.1.0",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
+    "ember-cli-fastboot": "^2.1.3",
     "ember-cli-head": "^0.4.1",
     "ember-cli-htmlbars": "^3.0.1",
     "ember-cli-htmlbars-inline-precompile": "^2.1.0",
@@ -46,6 +47,7 @@
     "ember-concurrency": "^0.10.0",
     "ember-concurrency-decorators": "^1.0.0-beta.2",
     "ember-data": "~3.10.0",
+    "ember-data-fastboot": "^0.1.2",
     "ember-decorators": "^6.0.0",
     "ember-engines": "^0.7.1",
     "ember-export-application-global": "^2.0.0",
