Revert "Tech maintenance"

--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "@firebase/database": "^0.3.16",
     "babel-eslint": "^8.0.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.5.2",
+    "ember-ajax": "^5.0.0",
+    "ember-auto-import": "^1.2.21",
     "ember-cli": "~3.10.1",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.7.3",
-    "ember-cli-bundle-analyzer": "^0.1.0",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-head": "^0.4.1",
@@ -49,7 +49,6 @@
     "ember-decorators": "^6.0.0",
     "ember-engines": "^0.7.1",
     "ember-export-application-global": "^2.0.0",
-    "ember-fetch": "^6.7.0",
     "ember-form-for": "^2.0.1",
     "ember-keyboard-shortcuts": "^1.0.6",
     "ember-load-initializers": "^2.0.0",
@@ -62,7 +61,7 @@
     "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.0.1",
     "ember-simple-auth": "^1.4.2",
-    "ember-simple-auth-token": "^4.0.7",
+    "ember-simple-auth-token": "git+https://github.com/abhishek97/ember-simple-auth-token.git",
     "ember-source": "~3.10.0",
     "ember-timer": "^1.1.0",
     "ember-toggle": "^5.3.2",
