NPM: Use exact version

--- a/package.json
+++ b/package.json
@@ -80,9 +80,9 @@
   },
   "dependencies": {
     "@coding-blocks/motley": "0.3.48",
-    "ember-line-clamp": "^0.2.15",
-    "moment": "^2.22.2",
-    "showdown-katex-studdown": "^0.4.0"
+    "ember-line-clamp": "0.2.15",
+    "moment": "2.22.2",
+    "showdown-katex-studdown": "0.4.0"
   },
   "ember-addon": {
     "paths": [
