--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-form-for": "^2.0.1",
     "ember-keyboard-shortcuts": "^1.0.6",
+    "ember-link-action": "^1.0.0",
     "ember-load-initializers": "^2.0.0",
     "ember-local-storage": "^1.4.1",
     "ember-maybe-import-regenerator": "^0.1.6",
