--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ember-cli": "~3.10.1",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.7.3",
+    "ember-cli-chart": "^3.5.0",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-head": "^0.4.1",
