--- a/package.json
+++ b/package.json
@@ -19,63 +19,63 @@
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
-    "@ember/jquery": "^0.6.0",
-    "@ember/optional-features": "^0.7.0",
+    "@ember/jquery": "^1.1.0",
+    "@ember/optional-features": "^1.0.0",
     "@firebase/app": "^0.3.13",
     "@firebase/database": "^0.3.16",
-    "babel-eslint": "^8.0.0",
+    "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "ember-ajax": "^5.0.0",
-    "ember-auto-import": "^1.2.21",
-    "ember-cli": "~3.10.1",
+    "ember-auto-import": "^1.5.2",
+    "ember-cli": "~3.14.0",
     "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^7.7.3",
+    "ember-cli-babel": "^7.11.1",
     "ember-cli-chart": "^3.5.0",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-head": "^0.4.1",
-    "ember-cli-htmlbars": "^3.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^2.1.0",
-    "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-htmlbars": "^4.0.5",
+    "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-sass": "^7.1.7",
     "ember-cli-showdown": "^4.4.2",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.1",
-    "ember-cli-uglify": "^2.1.0",
+    "ember-cli-template-lint": "^1.0.0-beta.3",
+    "ember-cli-uglify": "^3.0.0",
     "ember-composable-helpers": "^2.1.0",
     "ember-concurrency": "^0.10.0",
     "ember-concurrency-decorators": "^1.0.0-beta.2",
-    "ember-data": "~3.10.0",
+    "ember-data": "~3.14.0",
     "ember-decorators": "^6.0.0",
-    "ember-engines": "^0.7.1",
+    "ember-engines": "^0.8.2",
     "ember-export-application-global": "^2.0.0",
+    "ember-fetch": "^6.7.0",
     "ember-form-for": "^2.0.1",
     "ember-keyboard-shortcuts": "^1.0.6",
     "ember-link-action": "^1.0.0",
-    "ember-load-initializers": "^2.0.0",
+    "ember-load-initializers": "^2.1.0",
     "ember-local-storage": "^1.4.1",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-metrics": "^0.13.0",
     "ember-modal-dialog": "^3.0.0-beta.0",
     "ember-moment": "^7.7.0",
     "ember-monaco": "^1.1.0",
-    "ember-qunit": "^4.4.1",
-    "ember-resolver": "^5.0.1",
+    "ember-qunit": "^4.5.1",
+    "ember-resolver": "^5.3.0",
     "ember-simple-auth": "^1.4.2",
     "ember-simple-auth-token": "git+https://github.com/abhishek97/ember-simple-auth-token.git",
-    "ember-source": "~3.10.0",
+    "ember-source": "~3.14.1",
     "ember-timer": "^1.1.0",
     "ember-toggle": "^5.3.2",
     "ember-truth-helpers": "^2.0.0",
     "ember-uploader": "^2.0.0",
     "ember-welcome-page": "^4.0.0",
-    "eslint-plugin-ember": "^6.2.0",
-    "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-ember": "^7.1.0",
+    "eslint-plugin-node": "^10.0.0",
     "firepad": "^1.5.3",
-    "liquid-fire": "^0.29.2",
+    "liquid-fire": "^0.31.0",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.8.4"
+    "qunit-dom": "^0.9.0"
   },
   "engines": {
     "node": "8.* || >= 10.*"
