--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
   "ember-addon": {
     "paths": [
       "lib/cricket-cup",
-      "lib/hiring-blocks"
+      "lib/hiring-blocks",
+      "lib/ember-w-pack"
     ]
   }
 }
