--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "ember-modal-dialog": "^3.0.0-beta.0",
     "ember-moment": "^7.7.0",
     "ember-monaco": "^1.1.0",
+    "ember-power-select": "^4.0.0-beta.4",
     "ember-qunit": "^4.5.1",
     "ember-resolver": "^5.3.0",
     "ember-simple-auth": "^1.4.2",
