--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "node": "8.* || >= 10.*"
   },
   "dependencies": {
-    "@coding-blocks/motley": "coding-blocks/motley#online_revamp",
+    "@coding-blocks/motley": "coding-blocks/motley#ca94f8d",
     "ember-line-clamp": "^0.2.15",
     "moment": "^2.22.2",
     "showdown-katex-studdown": "^0.4.0"
