--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ember-composable-helpers": "^2.1.0",
     "ember-concurrency": "^0.10.0",
     "ember-concurrency-decorators": "^1.0.0",
+    "ember-content-placeholders": "^1.0.0",
     "ember-crumbly": "^3.0.1",
     "ember-data": "~3.14.0",
     "ember-decorators": "^6.0.0",
