--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
   "dependencies": {
     "@coding-blocks/motley": "0.7.2",
     "ember-line-clamp": "^0.2.15",
+    "js-base64": "^2.5.2",
     "moment": "^2.22.2",
     "showdown-katex-studdown": "^0.4.0"
   },
