--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build",
+    "build": "ember build --environment=production",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
     "start": "ember serve",
@@ -20,23 +20,25 @@
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@ember/jquery": "^1.1.0",
-    "@ember/optional-features": "^1.0.0",
+    "@ember/optional-features": "^1.3.0",
     "@ember/render-modifiers": "^1.0.2",
     "@firebase/app": "^0.3.13",
     "@firebase/database": "^0.3.16",
+    "@glimmer/component": "^1.0.0",
+    "@glimmer/tracking": "^1.0.0",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "ember-ajax": "^5.0.0",
-    "ember-auto-import": "^1.5.2",
-    "ember-cli": "~3.14.0",
+    "ember-auto-import": "^1.5.3",
+    "ember-cli": "~3.16.0",
     "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^7.11.1",
+    "ember-cli-babel": "^7.17.2",
     "ember-cli-chart": "^3.5.0",
-    "ember-cli-dependency-checker": "^3.1.0",
+    "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-head": "^0.4.1",
-    "ember-cli-htmlbars": "^4.0.5",
-    "ember-cli-inject-live-reload": "^2.0.1",
+    "ember-cli-htmlbars": "^4.2.2",
+    "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-sass": "^7.1.7",
     "ember-cli-showdown": "^4.4.2",
@@ -48,17 +50,17 @@
     "ember-concurrency-decorators": "^1.0.0",
     "ember-content-placeholders": "^1.0.0",
     "ember-crumbly": "^3.0.1",
-    "ember-data": "~3.14.0",
+    "ember-data": "~3.16.0",
     "ember-decorators": "^6.0.0",
     "ember-engines": "^0.8.2",
     "ember-event-helpers": "^0.1.0",
-    "ember-export-application-global": "^2.0.0",
-    "ember-fetch": "^6.7.0",
+    "ember-export-application-global": "^2.0.1",
+    "ember-fetch": "^7.0.0",
     "ember-form-for": "^2.0.1",
     "ember-in-element-polyfill": "^0.2.1",
     "ember-keyboard-shortcuts": "^1.0.6",
     "ember-link-action": "^1.0.0",
-    "ember-load-initializers": "^2.1.0",
+    "ember-load-initializers": "^2.1.1",
     "ember-local-storage": "^1.4.1",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-metrics": "^0.13.0",
@@ -66,27 +68,30 @@
     "ember-moment": "^7.7.0",
     "ember-monaco": "^1.1.0",
     "ember-power-select": "^4.0.0-beta.4",
-    "ember-qunit": "^4.5.1",
-    "ember-resolver": "^5.3.0",
+    "ember-qunit": "^4.6.0",
+    "ember-resolver": "^7.0.0",
     "ember-shepherd": "^10.0.1",
     "ember-simple-auth": "^1.4.2",
     "ember-simple-auth-token": "git+https://github.com/abhishek97/ember-simple-auth-token.git",
-    "ember-source": "~3.14.1",
+    "ember-source": "~3.16.0",
     "ember-timer": "^1.1.0",
     "ember-toggle": "^5.3.2",
     "ember-tooltips": "^3.4.2",
     "ember-truth-helpers": "^2.0.0",
     "ember-uploader": "^2.0.0",
     "ember-welcome-page": "^4.0.0",
-    "eslint-plugin-ember": "^7.1.0",
-    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-ember": "^7.7.2",
+    "eslint-plugin-node": "^11.0.0",
     "firepad": "^1.5.3",
     "liquid-fire": "^0.31.0",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.9.0"
+    "qunit-dom": "^1.0.0"
   },
   "engines": {
-    "node": "8.* || >= 10.*"
+    "node": "10.* || >= 12"
+  },
+  "ember": {
+    "edition": "octane"
   },
   "dependencies": {
     "@coding-blocks/motley": "0.7.3",
