--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
+    "ember-click-outside": "^2.0.0-beta.1",
     "ember-composable-helpers": "^2.1.0",
     "ember-concurrency": "^0.10.0",
     "ember-concurrency-decorators": "^1.0.0",
